--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -24,7 +24,7 @@
 <div class="container">
 
     <div class="row">
-        <form action="#" th:action="@{/}" th:object="${user}" method="post">
+        <form action="#" th:action="@{/register}" th:object="${user}" method="post">
             <table>
                 <tr>
                     <td>Username:</td>
