added /addtestvalues route for adding test messages and users

--- a/src/main/resources/templates/sentMessages.html
+++ b/src/main/resources/templates/sentMessages.html
@@ -25,7 +25,7 @@
 </nav>
 
 <div class="container">
-    <h2>My Received Messages</h2>
+    <h2>My Sent Messages</h2>
     <p>Here is a summary of your sent messages:</p>
 
     <table class="table">
