--- a/src/main/resources/templates/newMessage.html
+++ b/src/main/resources/templates/newMessage.html
@@ -26,24 +26,24 @@
 
 <div class="container">
     <div class="row">
-        <form action="#" th:action="@{/newMessage}" th:object="${message}" method="post">
+        <form action="#" th:action="@{/newMessage}" method="post">
             <table>
                 <tr>
                     <td>Receiver:</td>
                     <td>
-                        <select>
+                        <select name="receiverId">
                             <option th:if="${users.size() > 0}"
                                     th:each="user : ${users}"
                                     th:text="${user.username}"
                                     th:value="${user.id}"></option>
                         </select>
                     </td>
-                    <td th:if="${#fields.hasErrors('plaintext')}" th:errors="*{plaintext}">Plaintext Error</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>Message:</td>
-                    <td><textarea th:field="*{plaintext}" /></td>
-                    <td th:if="${#fields.hasErrors('plaintext')}" th:errors="*{plaintext}">Plaintext Error</td>
+                    <td><textarea name="plaintext" /></td>
+                    <!--<td th:errors="${plaintext}">Plaintext Error</td>-->
                 </tr>
                 <tr>
                     <td><button class="btn btn-primary" type="submit">Submit</button></td>
