Added Logout buttons to all templates
Added Logout buttons

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,6 +37,10 @@
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
+    
+    <a href="/hello" type="button" class="btn btn-default navbar-btn pull-right">
+      <button type="button" class="btn btn-danger">Logout</button>
+    </a>
 </nav>
 
 
