--- a/src/main/resources/templates/sentMessages.html
+++ b/src/main/resources/templates/sentMessages.html
@@ -22,10 +22,13 @@
             </li>
         </ul>
     </div>
+                <a href="/hello" type="button" class="btn btn-default navbar-btn pull-right">
+      <button type="button" class="btn btn-danger">Logout</button>
+    </a>
 </nav>
 
 <div class="container">
-    <h2>My Sent Messages</h2>
+    <h2>My Received Messages</h2>
     <p>Here is a summary of your sent messages:</p>
 
     <table class="table">
