--- a/src/main/resources/templates/checknewuser.html
+++ b/src/main/resources/templates/checknewuser.html
@@ -19,6 +19,9 @@
             </li>
         </ul>
     </div>
+    <a href="/hello" type="button" class="btn btn-default navbar-btn pull-right">
+      <button type="button" class="btn btn-danger">Logout</button>
+    </a>
 </nav>
 
 <div class="container">
