--- a/src/main/resources/templates/receivedMessages.html
+++ b/src/main/resources/templates/receivedMessages.html
@@ -22,6 +22,9 @@
             </li>
         </ul>
     </div>
+    <a href="/hello" type="button" class="btn btn-default navbar-btn pull-right">
+      <button type="button" class="btn btn-danger">Logout</button>
+    </a>
 </nav>
 
 <div class="container">
