adding httpsession session saving for login and adjusting views to support it throughout

--- a/src/main/resources/templates/sentMessages.html
+++ b/src/main/resources/templates/sentMessages.html
@@ -22,8 +22,8 @@
             </li>
         </ul>
     </div>
-                <a href="/hello" type="button" class="btn btn-default navbar-btn pull-right">
-      <button type="button" class="btn btn-danger">Logout</button>
+    <a href="/logout" type="button" class="btn btn-danger navbar-btn pull-right">
+        Logout
     </a>
 </nav>
 
