Added tab indicator + failed login view
Rearrange buttons a bit also

--- a/src/main/resources/templates/receivedMessages.html
+++ b/src/main/resources/templates/receivedMessages.html
@@ -20,6 +20,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="sentMessages">Sent Emails</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="receivedMessages"><font color="#03a9f4"><strong>Received Emails</strong></font></a>
+            </li>
         </ul>
     </div>
     <a href="/logout" type="button" class="btn btn-danger navbar-btn pull-right">
@@ -29,7 +32,7 @@
 
 <div class="container">
     <h2>My Received Messages</h2>
-    <p>Here is a summary of your recieved messages:</p>
+    <p>Here is a summary of your received messages:</p>
 
     <table class="table">
 
