--- a/src/main/resources/templates/newMessage.html
+++ b/src/main/resources/templates/newMessage.html
@@ -15,10 +15,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="receivedMessages">Received Emails</a>
+                <a class="nav-link" href="sentMessages"><font color="#03a9f4"><strong>New Email</strong></font></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="sentMessages">Sent Emails</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="receivedMessages">Received Emails</a>
             </li>
         </ul>
     </div>
