--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,9 +14,12 @@
     <a class="navbar-brand" href="#">My Encryption App</a>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="signin">Login</a>
-            </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="register"><font color="#03a9f4"><strong>Register</strong></font></a>
+                </li>
         </ul>
     </div>
 </nav>
@@ -37,9 +40,13 @@
                     <td th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</td>
                 </tr>
                 <tr>
-                    <td><button class="btn btn-primary" type="submit">Submit</button></td>
                 </tr>
             </table>
+                            <br />
+                <br />
+                <br />
+                <br />
+<td><span style="margin-left:7em;"></span><button class="btn btn-primary" type="submit">Register</button></td>
         </form>
     </div>
 
