--- a/src/main/resources/templates/sentMessages.html
+++ b/src/main/resources/templates/sentMessages.html
@@ -6,7 +6,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </head>
 <body>
-
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -16,6 +15,9 @@
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="newMessage">New Email</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="sentMessages"><font color="#03a9f4"><strong>Sent Emails</strong></font></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="receivedMessages">Received Emails</a>
@@ -28,7 +30,7 @@
 </nav>
 
 <div class="container">
-    <h2>My Received Messages</h2>
+    <h2>My Sent Messages</h2>
     <p>Here is a summary of your sent messages:</p>
 
     <table class="table">
@@ -39,6 +41,7 @@
             <th>Message Date Time</th>
             <th>Message</th>
             <th>From</th>
+            <th>To</th>
         </tr>
         </thead>
 
@@ -48,6 +51,7 @@
             <td th:text="${message.created}"></td>
             <td th:text="${message.decryptedText}"></td>
             <td th:text="${message.sender.username}"></td>
+            <td th:text="${message.receiver.username}"></td>
         </tr>
         </tbody>
 
