--- a/src/main/resources/templates/newMessage.html
+++ b/src/main/resources/templates/newMessage.html
@@ -11,11 +11,11 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">My Encryption App</a>
+    <a class="navbar-brand" href="#"><p th:text="${currentUser.username} + '\'s Encryption App'"/></a>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="sentMessages"><font color="#03a9f4"><strong>New Email</strong></font></a>
+                <a class="nav-link" href="newMessage"><font color="#03a9f4"><strong>New Email</strong></font></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="sentMessages">Sent Emails</a>
